@@ -66,7 +66,7 @@ static void encode_keys(struct geobuf_agg_context *ctx)
 #endif
 		char *key = pstrdup(tkey);
 		if (ctx->geom_name == NULL) {
-			if (!geom_found && typoid == TypenameGetTypid("geometry")) {
+			if (!geom_found && typoid == postgis_oid(GEOMETRYOID)) {
 				ctx->geom_index = i;
 				geom_found = 1;
 				continue;
